Add flexible margin to Header SVG-avatar image for RWD

--- a/_/css/style.scss
+++ b/_/css/style.scss
@@ -171,7 +171,7 @@ h3 {
   display: inline-block;
   width: 100%; // needed to draw the svg
   padding-bottom: 100%;
-  margin-bottom: 20px;
+  margin-bottom: 5%;
   overflow: hidden;
   vertical-align: middle;
 }
